msgstr ""

msgid "Folder has no subfolders or belonging subnets"
msgstr ""

msgid "Subnets menu"
msgstr ""

msgid "No sections available!"
msgstr ""

msgid "Clik to reorder widgets"
msgstr ""

msgid "Database verified"
msgstr ""

msgid "New version available"
msgstr ""

msgid "Back to section"
msgstr ""

msgid "Available subnets in subsection"
msgstr ""

msgid "Invalid action"
msgstr ""

msgid "Database error: "
msgstr ""

msgid "Error: Invalid authentication method"
msgstr ""

msgid "Invalid username or password"
msgstr ""

msgid "php Socket extension missing"
msgstr ""

msgid "Radius login successful"
msgstr ""

msgid "No crypt types supported"
msgstr ""

msgid "your password was updated"
msgstr ""

msgid "Administrative privileges required"
msgstr ""

msgid "No records found to replace"
msgstr ""

msgid "Update: "
msgstr ""

msgid "Invalid action!"
msgstr ""

msgid "Failed to update address status"
msgstr ""

msgid "Failed to delegate permissions"
msgstr ""

msgid "Invalid PDNS action"
msgstr ""

msgid "Invalid subnet Id"
msgstr ""

msgid "Failed to move IP address"
msgstr ""

msgid "Invalid Network!"
msgstr ""

msgid "Subnet $new_subnet overlapps with"
msgstr ""

msgid "Mask must be an integer"
msgstr ""

msgid "New network is same as old network"
msgstr ""

msgid "Subnet it same as "
msgstr ""

msgid "Invalid number of subnets"
msgstr ""

msgid "Subnet overlapping - "
msgstr ""

msgid "Record created"
msgstr ""

msgid "Record updated"
msgstr ""

msgid "Record deleted"
msgstr ""

msgid "Domain id must be an integer"
msgstr ""

msgid "Invalid record name"
msgstr ""

msgid "Invalid record type"
msgstr ""

msgid "All records for domain removed"
msgstr ""



### 1.18.009 ###

msgid "Select device where subnet is located"
msgstr ""

msgid "Belonging hosts"
msgstr ""

msgid "No subnets belong to this device"
msgstr ""


### 1.18.021 ###

msgid "Log files are sent to syslog"
msgstr ""

msgid "Syslog files are sent to syslog"
msgstr ""
